--- a/hadoop-client/pom.xml
+++ b/hadoop-client/pom.xml
@@ -18,12 +18,12 @@
 <parent>
    <groupId>org.apache.hadoop</groupId>
    <artifactId>hadoop-project-dist</artifactId>
-   <version>3.0.0-SNAPSHOT</version>
+   <version>3.0.0-UDA</version>
    <relativePath>../hadoop-project-dist</relativePath>
  </parent>
   <groupId>org.apache.hadoop</groupId>
   <artifactId>hadoop-client</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>3.0.0-UDA</version>
   <packaging>jar</packaging>
 
   <description>Apache Hadoop Client</description>
