Fixes to enable Mellanox UDA to work with the trunk.
Many of the fixes are literal hacks, including atleast one case in which
a username was hardcoded and the location of libuda.so was hardcoded.

These fixes were more for short-term testing/trying. Longer term real
fixes will be needed.

--- a/mlx-3.x/Makefile
+++ b/mlx-3.x/Makefile
@@ -16,11 +16,12 @@
 #
 #
 
-#CPATH=hadoop-core-1.1.0-SNAPSHOT.jar:commons-logging-1.1.1.jar 
+#CPATH=hadoop-core-1.1.0-UDA.jar:commons-logging-1.1.1.jar 
 #CPATH=../hadoop-1.1.0-patched-v2/build/classes/:commons-logging-1.1.1.jar 
-CBASE=../hadoop-dist/target/hadoop-3.0.0-SNAPSHOT/share/hadoop/
-#CPATH=.:$(CBASE)/common/hadoop-common-3.0.0-SNAPSHOT.jar:$(CBASE)/common/lib/commons-logging-1.1.1.jar:$(CBASE)/mapreduce/hadoop-mapreduce-client-core-3.0.0-SNAPSHOT.jar:$(CBASE)/mapreduce/hadoop-yarn-server-nodemanager-3.0.0-SNAPSHOT.jar:$(CBASE)/mapreduce/hadoop-yarn-common-3.0.0-SNAPSHOT.jar:$(CBASE)/mapreduce/hadoop-yarn-api-3.0.0-SNAPSHOT.jar:$(CBASE)/mapreduce/hadoop-mapreduce-client-core-3.0.0-SNAPSHOT.jar
-CPATH=.:hadoop-common-3.0.0-SNAPSHOT.jar:commons-logging-1.1.1.jar:hadoop-mapreduce-client-core-3.0.0-SNAPSHOT.jar:hadoop-yarn-server-nodemanager-3.0.0-SNAPSHOT.jar:hadoop-yarn-common-3.0.0-SNAPSHOT.jar:hadoop-yarn-api-3.0.0-SNAPSHOT.jar:hadoop-mapreduce-client-core-3.0.0-SNAPSHOT.jar
+CBASE=../hadoop-dist/target/hadoop-3.0.0-UDA/share/hadoop/
+#CPATH=.:$(CBASE)/common/hadoop-common-3.0.0-UDA.jar:$(CBASE)/common/lib/commons-logging-1.1.1.jar:$(CBASE)/mapreduce/hadoop-mapreduce-client-core-3.0.0-UDA.jar:$(CBASE)/mapreduce/hadoop-yarn-server-nodemanager-3.0.0-UDA.jar:$(CBASE)/mapreduce/hadoop-yarn-common-3.0.0-UDA.jar:$(CBASE)/mapreduce/hadoop-yarn-api-3.0.0-UDA.jar:$(CBASE)/mapreduce/hadoop-mapreduce-client-core-3.0.0-UDA.jar
+#CPATH=.:hadoop-common-3.0.0-UDA.jar:commons-logging-1.1.1.jar:hadoop-mapreduce-client-core-3.0.0-UDA.jar:hadoop-yarn-server-nodemanager-3.0.0-UDA.jar:hadoop-yarn-common-3.0.0-UDA.jar:hadoop-yarn-api-3.0.0-UDA.jar:hadoop-mapreduce-client-core-3.0.0-UDA.jar
+CPATH=.:$(CBASE)/common/hadoop-common-3.0.0-UDA.jar:$(CBASE)/common/lib/commons-logging-1.1.1.jar:$(CBASE)/mapreduce/hadoop-mapreduce-client-core-3.0.0-UDA.jar:$(CBASE)/yarn/hadoop-yarn-server-nodemanager-3.0.0-UDA.jar:$(CBASE)/yarn/hadoop-yarn-common-3.0.0-UDA.jar:$(CBASE)/yarn/hadoop-yarn-api-3.0.0-UDA.jar
 
 all:
 	rm -rf out
